# api/src/main/java/com/intensity/group/controller/GroupController.java
@@ -3,8 +3,11 @@ package com.intensity.group.controller;
 import com.intensity.common.AuthPrincipal;
 import com.intensity.group.dto.GroupResponse;
 import com.intensity.group.service.GroupQueryService;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -22,5 +25,11 @@ public class GroupController {
 	@GetMapping
 	public List<GroupResponse> listGroups() {
 		return groupQueryService.listForPrincipal(AuthPrincipal.requireCurrent());
+	}
+
+	@PostMapping
+	@ResponseStatus(HttpStatus.CREATED)
+	public GroupResponse createGroup() {
+		return groupQueryService.createForPrincipal(AuthPrincipal.requireCurrent());
 	}
 }
